--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const yearsLabel = `${years} year${years === 1 ? '' : 's'}`;
   title="About Me"
   description="Civil engineering PhD, systems builder, and data-driven life logger."
   pubDate="2025-10-14"
-  heroImage="/images/about-lifeloggerz-trace.png"
+  heroImage="/images/about-lifeloggerz.gif"
   wide
   showViews={false}
 >
